--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                                     <div class="project-description">
                                         <h3 class="project-title">Login Page</h3>
                                         <p class="project-para">This is a Registration website. It is built using HTML, CSS.</p>
-                                        <a href="https://swapnil-passwordgenerator.netlify.app/" target="_blank" class="button-flex button" id="checkout-btn">
+                                        <a href="https://loginform-by-pooja.netlify.app/" target="_blank" class="button-flex button" id="checkout-btn">
                                             <p>Check Out</p>
                                             <i class="uil uil-arrow-right"></i>
                                         </a>
@@ -441,7 +441,7 @@
                                     <div class="project-description">
                                         <h3 class="project-title">Shopping Website</h3>
                                         <p class="project-para">This is a shopping website which shows various types of clothing and beauty products. It is built using HTML, CSS.</p>
-                                        <a href="https://swap-weather-app.netlify.app/" target="_blank" class="button-flex button" id="checkout-btn">
+                                        <a href="https://shoppingapp-by-pooja.netlify.app/" target="_blank" class="button-flex button" id="checkout-btn">
                                             <p>Check Out</p>
                                             <i class="uil uil-arrow-right"></i>
                                         </a>
@@ -454,7 +454,7 @@
                                     <div class="project-description">
                                         <h3 class="project-title">Calculator App</h3>
                                         <p class="project-para">This is a Calculator App which help us to solve various type of math problems like addition, substraction ,multipication and division. It is built using HTML, CSS and JavaScript.</p>
-                                        <a href="https://swapnil-dev-detector.netlify.app/" class="button-flex button" target="_blank" id="checkout-btn">
+                                        <a href="https://calculator-app-by-pooja.netlify.app/" class="button-flex button" target="_blank" id="checkout-btn">
                                             <p>Check Out</p>
                                             <i class="uil uil-arrow-right-b">
                                                 
@@ -470,7 +470,7 @@
                                     <div class="project-description">
                                         <h3 class="project-title">Hotel Management System</h3>
                                         <p class="project-para">This is a Hotel Management App which helps us to order food ,for stay there and other facilities. It is built using JDBC.</p>
-                                        <a href="https://swap-weather-app.netlify.app/" target="_blank" class="button-flex button" id="checkout-btn">
+                                        <a href="https://hotelmanagement-by-pooja.netlify.app/" target="_blank" class="button-flex button" id="checkout-btn">
                                             <p>Check Out</p>
                                             <i class="uil uil-arrow-right"></i>
                                         </a>
