--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                     </div>
 
                     <!-- Form Section -->
-                    <form class="form-section section-content-grid form-content-gap" action="https://formspree.io/f/mvojjajo"
+                    <form class="form-section section-content-grid form-content-gap" action="https://formspree.io/f/xbjnjpwd"
                     method="POST" id="form">
                         <!-- name -->
                         <div class="section-content-grid form-content-grid form-content-gap">
